--- a/package.json
+++ b/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "tokohapeya-media",
+  "description": "Exercise for Topic 1- 3 Binar Bootcamp",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agiladis/tokohapeya-media.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agiladis/tokohapeya-media/issues"
+  },
+  "homepage": "https://github.com/agiladis/tokohapeya-media#readme",
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
