--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 PORT=8080
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+IMAGEKIT_PUBLIC_KEY="your_imagekit_public_key"
+IMAGEKIT_PRIVATE_KEY="your_imagekit_private_key"
+IMAGEKIT_URL_ENDPOINT="https://ik.imagekit.io/your/path/endpoint"
